# twitch-service

./: .cli.env.example  .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  TESTS_TODO.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  twitch-eventsub-cli.cmd  twitch-eventsub-cli.ps1
app/: auth.py  bot_auth.py  cli.py  config.py  db.py  event_router.py  eventsub_authorization.py  eventsub_catalog.py  eventsub_manager.py  main.py  models.py  schemas.py  status_runtime.py  twitch.py  twitch_chat_assets.py
app/cli_components/: bot_workflows.py  chat_tools.py  eventsub_tools.py  interactive_tools.py  monitoring.py  remote_console.py  service_management.py
app/core/: network_security.py  normalization.py  redaction.py  runtime_tokens.py
app/eventsub_manager_parts/: notification_mixin.py  subscription_mixin.py
app/routes/: __init__.py  admin_routes.py  oauth_routes.py  service_routes.py  status_routes.py  system_routes.py  twitch_routes.py  webhook_routes.py  ws_routes.py
app/static/: status.css  status.js  swagger-dark.css
docs/: ARCHITECTURE.md  COMMANDS.md  DEV_SETUP.md  EVENTSUB_TRANSPORT_CATALOG.md  HARDENING_PLAN.md  LLM_USAGE.md  PRODUCTION_DEPLOY.md  RESTART_DIAGNOSTICS.md  START_AND_TEST_APP.md
migrations/: env.py
migrations/versions/: 20260220_0001_initial_schema.py  20260307_0002_broadcaster_identity_cache.py  20260310_0003_raid_direction_interest_keys.py  20260321_0004_authorization_source_keys.py
observability/alloy/: config.alloy
scripts/: cli-container.ps1  cli-container.sh  cli-live.ps1  cli-live.sh  deploy.ps1  deploy.sh  dev-container.ps1  dev.ps1  install.ps1  install.sh  prod-container.ps1  prod-container.sh  run-dev.ps1  run-dev.sh  run.ps1  run.sh
test-app/: .env.example  .gitignore  README.md  index.js  package-lock.json  package.json
test-app/public/: app.js  index.html  styles.css
tests/: conftest.py
tests/fixtures/: factories.py
(+25 files in other folders)
